Gap fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -1712,7 +1712,6 @@ h3 {
   .event-wrap {
     display: grid;
     grid-template-columns: repeat(1, 1fr) !important;
-    gap: 1rem;
   }
 }
 
